fixed ham icon touchend on mobile browsers w. touchFix()

--- a/sectors/static/css/style.css
+++ b/sectors/static/css/style.css
@@ -6704,7 +6704,7 @@ input, textarea {
   position: relative;
   width: 90%;
   max-width: 600px;
-  margin: 3em auto 4em;
+  margin: 4em auto 4em;
   cursor: auto;
   background: #ffffff;
   -webkit-border-radius: 0.25em;
