--- a/sectors/static/sass/extensions/_login.scss
+++ b/sectors/static/sass/extensions/_login.scss
@@ -99,7 +99,8 @@ input, textarea {
 
     width: 90%;
     max-width: 600px;
-    margin: 3em auto 4em;
+    //margin: 3em auto 4em;
+    margin: 4em auto 4em;
 
     cursor: auto;
 
